# Behave

./: !READ_ME_FIRST.txt  .env.example  .gitignore  Behave.code-workspace  Captsone.txt  DataExpert_Transcript3D2.txt  DataExpert_Transcript3d2L2.txt  DataExpert_Transcript4DLab1.txt  DataExpert_Transcript4DLab2.txt  DataExpert_Transcript4dl1.txt  DataExpert_Transcript4dl2.txt  DataExpert_Transcript5DL2.txt  DataExpert_Transcript5DL2txt.txt  DataExpert_Transcript5DLab1.txt  DataExpert_Transcript5DLab2.txt  DataExpert_TranscriptLab1.txt  DataExpert_TranscriptLab2.txt  DataExpert_TranscriptLecture1.txt  DataExpert_Transcriptday2.txt  DataExpert_Transcriptw2d1.txt  DataExpert_Transcriptw2d1l1.txt  DataExpert_Transcriptw2d2.txt  DataExpert_Transcriptw2d2l2.txt  DataExpert_Transcriptw3d1.txt  DataExpert_Transcriptw3d1L1.txt  README.md  behave-platform-overview.html  behave_changes_simple.html  behave_explainer.html  behave_platform_spec_v3.docx  behave_workflow_deep_dive.html  capstone_proposal.md  capstone_roadmap.md  capstone_submission.md  databricks.yml  diagnose_failure.py  diagnose_run.py  generate_behave_doc.py  pyproject.toml  run_smoke_test.py  (+5 more)
.github/: copilot-instructions.md
dashboard/: app.py  render.yaml  requirements.txt
deployment_evidence/: DEPLOYMENT_EVIDENCE.md
docs/: 01-creative-analysis.md  02-cohort-selection.md  03-persona-evaluation.md  04-critic-agent.md  05-memory-system.md  06-medallion-pipeline.md  07-recommendation-agent.md  08-personas.md  09-roadmap.md  10-aha-moments.md  11-india-use-cases.md  12-simulation-ingest.md  13-mlflow-tracking.md  (+2 more)
(+71 files in other folders)
