[project]
name = "synthetic-india"
version = "0.1.0"
description = "Agentic creative testing platform for Indian D2C brands"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "tiktoken>=0.5",
    "Pillow>=10.0",
    "rich>=13.0",
]

[project.optional-dependencies]
databricks = [
    "databricks-sdk>=0.20",
    "delta-spark>=3.0",
    "pyspark>=3.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
